# kernel

./: .gitignore  .gitmodules  CMakeLists.txt  GNUmakefile  README.md  kernel.c
.archive/: Makefile  boot.asm  linker.ld
.github/workflows/: ci.yml
kernel/: CMakeLists.txt  GNUmakefile  Makefile
kernel/src/: alloc.c  dbg.c  dbg.h  dsdt.c  gdt.c  gdt.h  idt.c  idt.h  io.c  io.h  kb.c  kb.h  main.c  memfuncs.c  page.c  pmm.c  printf.c  printf.h  shutdown.c  smap.c  smap.h
kernel/src/rust/: Cargo.toml
kernel/src/rust/src/: lib.rs
kernel/src/system/: alloc.h  dbg.h  dsdt.h  fadt.h  gdt.h  idt.h  io.h  memfuncs.h  page.h  pmm.h  printf.h  rsdp.h  rsdt.h  shutdown.h  smap.h
ovmf/: ovmf-code-x86_64.fd
